--- a/index.html
+++ b/index.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <script defer src="./node_modules\long-press-event\dist\long-press-event.min.js"></script>
 
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-  </head>
-  <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="/socket.io/socket.io.js"></script>
+  <title>Vs Code shortCut</title>
 
-    <script>
-      var socket = io();
+</head>
 
-      var messages = document.getElementById('messages');
-      var form = document.getElementById('form');
-      var input = document.getElementById('input');
+<body oncopy="return false" oncut="return false" onpaste="return false">
+  <div>
+    <button id="goBack" class='btn btn-primary btn-block mt-4 mb-4 customBtn'>Go Back</button>
+  </div>
+  <form action="/action_page.php" method="get">
+    <label for="browser">Choose your shortcut tile from the list:</label>
+    <input list="browsers" class="form-control" name="browser" id="browser">
+    <datalist id="browsers" onclick="changes($event)">
 
-      form.addEventListener('submit', function(e) {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit('chat message', input.value);
-          input.value = '';
-        }
-      });
+    </datalist>
+  </form>
+  <div class="cmd-container">
+    <div class="cards-list">
 
-      socket.on('chat message', function(msg) {
-        var item = document.createElement('li');
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-      });
-    </script>
-  </body>
+    </div>
+  </div>
+
+  <div>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-4 text-center">
+          <div class="row">
+            <div class="col-sm-12 mt-5 bgWhite">
+              <div class="title">
+                Verify 4 digit ID
+              </div>
+
+              <form action="" class="mt-5" id="idForm">
+                <input class="otp" type="text" onkeyup='tabChange(1)' maxlength=1 required>
+                <input class="otp" type="text" onkeyup='tabChange(2)' maxlength=1 required>
+                <input class="otp" type="text" onkeyup='tabChange(3)' maxlength=1 required>
+                <input class="otp" type="text" onkeyup='tabChange(4)' maxlength=1 required>
+              </form>
+              <hr class="mt-4">
+              <button id="verifyBtn" class='btn btn-primary btn-block mt-4 mb-4 customBtn'>Proceed</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+
+  </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script defer src="./cards.js"></script>
+  <script defer src="./verifyId.js"></script>
+
+  
+</body>
+
 </html>
